--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#Profiru">Purofiru</a></li>
         <li><a href="#Skill">Skill</a></li>
         <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
     <!--SP用ナビゲーション-->
@@ -77,8 +77,8 @@
         <img class="Skill_icon" src="images/Adobe_Photoshop_CC_icon 1.png" alt="">
         <h2>Photoshop</h2>
         <p></p>
-      </div class="Skill_block">
-      <div>
+      </div>
+      <div class="Skill_block">
         <img class="Skill_icon" src="images/Figma Icon (Full-color) 1.png" alt="">
         <h2>Figma</h2>
         <p></p>
@@ -90,12 +90,49 @@
   <div class="main_section" id="Portfolio">
     <h1 class="main_title">Portfolio</h1>
     <div class="Portfolio_content">
+      <div class="portfolio_img">
+        <img src="images/ハンバーガーバナー.png" alt="">
+        <img src="images/広告バナー完成品.png" alt="">
+        <img src="images/スイーツ専門店LP模写.png" alt="">
+      </div>
+      <a href="portfolio.html"><img src="images/btn1.png" alt=""></a>
+    </div>
+  </div>
 
+  <!--お問い合わせセクション-->
+  <div class="Contact_section" id="Contact">
+    <h1>Contact</h1>
+    <div class="contact_text">
+          <div class="contact_block">
+            <label for="">お名前</label>
+            <input type="text">
+          </div>
+          <div class="contact_block">
+            <label for="">フリガナ</label>
+            <input type="text">
+          </div>
+          <div class="contact_block">
+            <label for="">メールアドレス</label>
+            <input type="email">
+          </div>
+          <div class="contact_block">
+            <label for="">お問い合わせ内容</label>
+            <textarea name="" id=""></textarea>
+          </div>
+          <img src="images/btn2.png" alt="">
     </div>
   </div>
 </main>
 <footer>
-
+  <div class="footer_section">
+    <ul>
+        <li><a href="#Profiru">Purofiru</a></li>
+        <li><a href="#Skill">Skill</a></li>
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
+    </ul>
+    <img src="images/Instagram_Glyph_White 2.png" alt="">
+  </div>
 </footer>
 </body>
 </html>
