--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KN_portfolio</title>
+  <!-- Add the slick-theme.css if you want default styling -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <!-- Add the slick-theme.css if you want default styling -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" href="portfolio.css">
   <script src="script.js"></script>
 </head>
@@ -16,8 +20,8 @@
       <!--PC用ナビゲーション-->
       <nav class="nav_pc">
         <ul>
-          <li><a href="index.html#Purofiru">Purofiru</a></li>
-          <li><a href="#Skill">Skill</a></li>
+          <li><a href="index.html#Profiru">Purofiru</a></li>
+          <li><a href="index.html#Skill">Skill</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
@@ -33,15 +37,27 @@
     <h1 class="main_title">Portfolio</h1>
     <div class="main_section">
       <div class="Sp_portfolio">
-        <img src="images/AdobeStock_681258331 2.png" alt="">
+        <div class="Sp_carousel_nav">
+          <div class="Sp_veiw">
+            <div><img class="Sp_carousel_size" src="images/ハンバーガーバナー.png" alt=""></div>
+            <div><img class="Sp_carousel_size" src="images/キャンプギア広告バナー.png" alt=""></div>
+            <div><img class="Sp_carousel_size" src="images/広告バナー完成品.png" alt=""></div>
+          </div>
+          <img class="Sp_carousel_menu" src="images/SP_screen.png" alt="">
+        </div>
         <div class="Sp_carousel">
           <h2>広告バナー</h2>
+          <div class="Sp_carousel_menu">
+            <div><img class="Sp_carousel_size" src="images/ハンバーガーバナー.png" alt=""></div>
+            <div><img class="Sp_carousel_size" src="images/キャンプギア広告バナー.png" alt=""></div>
+            <div><img class="Sp_carousel_size" src="images/広告バナー完成品.png" alt=""></div>
+          </div>
         </div>
       </div>
     </div>
     <div class="main_section">
         <div class="Pc_portfolio">
-          <img src="images/AdobeStock_509905937 2.png" alt="">
+          <img src="images/PC_screen.png" alt="">
           <div class="Pc_carousel">
             <h2>LPサイト</h2>
           </div>
@@ -59,6 +75,9 @@
       <img src="images/Instagram_Glyph_White 2.png" alt="">
     </div>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
