--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,13 @@
 <body>
   <header>
     <div>
-      <img src="images/KNicon.png" alt="">
+      <a class="logo_img" href="index.html">
+        <img src="images/KNicon.png" alt="">
+      </a>
       <!--PC用ナビゲーション-->
       <nav class="nav_pc">
         <ul>
-          <li><a href="index.html#Profiru">Purofiru</a></li>
+          <li><a href="index.html#Profile">Profile</a></li>
           <li><a href="index.html#Skill">Skill</a></li>
           <li><a href="#Portfolio">Portfolio</a></li>
           <li><a href="#Contact">Contact</a></li>
@@ -29,7 +31,6 @@
       <!--SP用ナビゲーション-->
       <nav class="nav_sp">
         <img class="menu_btn_open" src="images/menu_100dp_000_FILL0_wght400_GRAD0_opsz48 2.png" alt="">
-        <img class="menu_btn_close" src="images/close_100dp_000_FILL0_wght400_GRAD0_opsz48 2.png" alt="">
       </nav>
     </div>
   </header>
@@ -57,9 +58,29 @@
     </div>
     <div class="main_section">
         <div class="Pc_portfolio">
-          <img src="images/PC_screen.png" alt="">
+          <div class="Pc_carousel_nav">
+          <div class="Pc_veiw">
+            <img class="Pc_main_size" src="images/PC用化粧品.png" alt="">
+          </div>
+          <div class="Pc_monitor">
+          <img class="Pc_carousel_menu" src="images/PC_screen.png" alt="">
+          <img class="Pc_carousel_menu2" src="images/AdobeStock_509905937 2.png" alt="">
+          </div>
+          </div>
           <div class="Pc_carousel">
             <h2>LPサイト</h2>
+            <ul class="Pc_menu">
+              <li class="current"><img class="Pc_carousel_size" src="images/PC用化粧品.png" alt=""></li>
+              <li><img class="Pc_carousel_size" src="images/PC用化粧品2.png" alt=""></li>
+              <li><img class="Pc_carousel_size" src="images/PC用化粧品3.png" alt=""></li>
+            </ul>
+            <ul class="Pc_menu">
+              <li><img class="Pc_carousel_size" src="images/スイーツ専門店LP模写.png" alt=""></li>
+              <li><img class="Pc_carousel_size" src="images/スイーツ専門店LP模写2.png" alt=""></li>
+              <li><img class="Pc_carousel_size" src="images/スイーツ専門店LP模写3.png" alt=""></li>
+              <li><img class="Pc_carousel_size" src="images/スイーツ専門店LP模写4.png" alt=""></li>
+              <li><img class="Pc_carousel_size" src="images/スイーツ専門店LP模写5.png" alt=""></li>
+            </ul>
           </div>
         </div>
       </div>
@@ -67,12 +88,14 @@
   <footer>
     <div class="footer_section">
       <ul>
-        <li><a href="#Profiru">Purofiru</a></li>
-        <li><a href="#Skill">Skill</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#Contact">Contact</a></li>
+        <li><a href="index.html#Profile">Profile</a></li>
+        <li><a href="index.html#Skill">Skill</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="index.html#Contact">Contact</a></li>
       </ul>
-      <img src="images/Instagram_Glyph_White 2.png" alt="">
+    <a href="https://www.instagram.com/nishizawa45/?igsh=MW4yeGFlMnowMGZtYQ%3D%3D&utm_source=qr#">
+    <img src="images/Instagram_Glyph_White 2.png" alt="">
+    </a>
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
