--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,6 @@
   <!-- Add the slick-theme.css if you want default styling -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" href="portfolio.css">
-  <script src="script.js"></script>
 </head>
 
 <body>
@@ -29,11 +28,21 @@
         </ul>
       </nav>
       <!--SP用ナビゲーション-->
-      <nav class="nav_sp">
-        <img class="menu_btn_open" src="images/menu_100dp_000_FILL0_wght400_GRAD0_opsz48 2.png" alt="">
-      </nav>
+    <nav class="nav_sp">
+      <img  class="menu_btn_open" src="images/menu_100dp_000_FILL0_wght400_GRAD0_opsz48 2.png" alt="">
+      <img  class="menu_btn_close" src="images/close_100dp_000_FILL0_wght400_GRAD0_opsz48 2.png" alt="">
+    </nav>
     </div>
   </header>
+  <!--ハンバーガーメニュー-->
+  <div class="hamburger_menu">
+    <ul>
+      <li><a href="index.html#Profile">Profile</a></li>
+      <li><a href="index.html#Skill">Skill</a></li>
+      <li><a href="#Portfolio">Portfolio</a></li>
+      <li><a href="#Contact">Contact</a></li>
+    </ul>
+  </div>
   <main>
     <h1 class="main_title">Portfolio</h1>
     <div class="main_section">
